Closed Bug 33137 Opened 25 years ago Closed 25 years ago

<td> width attribute ignored

Categories

(Core :: Layout: Tables, defect, P3)

x86
All
defect

Tracking

()

VERIFIED FIXED

People

(Reporter: gerv, Assigned: karnaze)

References

()

Details

(Keywords: testcase, top100, Whiteboard: [nsbeta3+])

Attachments

(4 files)

From Bugzilla Helper: User-Agent: Mozilla/4.7 [en] (Win95; U) BuildID: 20000323 Mozilla seems to be ignoring the width attribute of <td> tags in some cases. Reproducible: Always Steps to Reproduce: View test case or URL. This URL is a top site. Note that this isn't Bug 19591.
Attached file Test case
Attached file Simpler test case
Bug occurs when a wide object forces a table cell to grow wider. The wrapping in that column is no longer performed. In test case above, change width of HR to 70 to observe correct wrapping, or to 80 to see the bug.
Status: NEW → ASSIGNED
Target Milestone: --- → M17
Adding testcase keyword so this doesn't show up on the bugathon search page.
Keywords: testcase
This is reasonably bad; nominating for nsbeta3. Both NS 4.x and IE 5 get this right. Gerv
Keywords: nsbeta3, top100
Approving for beta3: looks like there are several (hopefully) related table / cell width problems to address for RTM
Whiteboard: [nsbeta3+]
Target Milestone: M17 → M18
Fixed.
Status: ASSIGNED → RESOLVED
Closed: 25 years ago
Resolution: --- → FIXED
The fix cuts the <hr> on the right side in the *broken* testcase. There is no right edge visible (with IE it is).
I think this bug fix is wrong. Open tinderbox and reduce the horizontal window size. Look for long contributor names (mozilla.BenB) they overlap into the build cells. No problem with 2000090708 Win98 but the problem occures with 2000090804.
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
I believe this fix is correct. The <hr> spills out of 3rd attachment for a different reason (I filed bug 51961). I'm not seeing the problem in the 4th attachment, when I make my window very narrow. I have the most recent table changes but the rest of my build is much older than 9/7, which leads me to believe that another part of the system may be responsible for the regression. I'm closing this again.
Status: REOPENED → ASSIGNED
marking fixed.
Status: ASSIGNED → RESOLVED
Closed: 25 years ago25 years ago
Resolution: --- → FIXED
Tested using 9/12 builds across platform. Verified bug fixed.
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: