bug 33137 - don't use the min width of a cell which is larger than the fixed width of the cell as the basis of the fixed width contributor. r=attinasi.